# Open_Duck_Playground

./: .gitignore  README_LOREN.md  pyproject.toml
playground/common/: plot_saved_obs.py  randomize.py  rewards.py  rewards_numpy.py  runner.py
playground/open_duck_mini_v2/: base.py  constants.py  joystick.py  mujoco_infer.py  mujoco_infer_base.py  runner.py  standing.py
playground/open_duck_mini_v2/xmls/: open_duck_mini_v2.xml  scene_combined_terrain_backlash.xml  scene_flat_terrain_backlash.xml  scene_rough_terrain_backlash.xml
